Added class needed for css editing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="box">
+        <div class="middle">
+            <button class="button">Set grid size</button>
+            <div id="box"></div>
         </div>
     </body>
     <script src="script.js"></script>
